--- a/mop/Pages/ClientsPage.xaml
+++ b/mop/Pages/ClientsPage.xaml
@@ -49,7 +49,7 @@
                     </LinearGradientBrush>
                 </TextBlock.Foreground>
             </TextBlock>
-            <StackPanel Orientation="Horizontal">
+            <StackPanel Orientation="Horizontal" Margin="0 20">
                 <TextBlock Text="фамилия: " FontWeight="Bold" FontSize="25">
                     <TextBlock.Foreground>
                         <LinearGradientBrush>
@@ -164,7 +164,8 @@
                     </GridView>
                 </ListView.View>
             </ListView>
-        <StackPanel Orientation="Horizontal" Height="80">
+        <StackPanel Orientation="Horizontal" Height="80"
+                    Margin="0 20">
             <Border CornerRadius="40"
                 Width="80">
                 <Border.Background>
