--- a/mop/Pages/ProfilePage.xaml
+++ b/mop/Pages/ProfilePage.xaml
@@ -343,7 +343,8 @@
         <ComboBox Grid.RowSpan="1" Grid.ColumnSpan="2" 
               Grid.Row="4" Grid.Column="1" x:Name="educationCb"
               Width="250" Height="40" FontWeight="Bold"
-              ItemsSource="{Binding educations}" SelectionChanged="educationCb_SelectionChanged">
+              ItemsSource="{Binding educations}"
+                  SelectionChanged="educationCb_SelectionChanged">
             <ComboBox.Foreground>
                 <LinearGradientBrush>
                     <GradientStop Color="#C0D5B3" Offset="0"/>
