--- a/mop/Pages/RequestsPage.xaml
+++ b/mop/Pages/RequestsPage.xaml
@@ -35,7 +35,8 @@
                 </TextBlock.Foreground>
             </TextBlock>
             <StackPanel x:Name="sortStP" Orientation="Horizontal" Margin="0 20" Width="1200">
-                <StackPanel Orientation="Horizontal" Margin="0 0 30 0">
+                <StackPanel x:Name="surSt" Orientation="Horizontal" Margin="0 0 30 0">
+                    
                     <TextBlock Text="фамилия: " FontWeight="Bold" FontSize="25">
                         <TextBlock.Foreground>
                             <LinearGradientBrush>
@@ -287,7 +288,12 @@
                                 <GradientStop Color="#A3AEE6" Offset="1"/>
                             </LinearGradientBrush>
                         </Border.Background>
-                        <Button Content="✓" Style="{StaticResource circle}" FontSize="40" FontWeight="Bold" Height="80" ToolTip="проверка пройдена" Foreground="White" Background="Transparent" BorderThickness="0" x:Name="checkedBtn" Click="checkedBtn_Click"/>
+                        <Button Content="✓" Style="{StaticResource circle}" 
+                                FontSize="40" FontWeight="Bold" Height="80" 
+                                ToolTip="проверка пройдена" 
+                                Foreground="White" Background="Transparent" 
+                                BorderThickness="0" x:Name="checkedBtn" 
+                                Click="checkedBtn_Click"/>
                     </Border>
                 </StackPanel>
                 <StackPanel Orientation="Horizontal" Margin="1040 0 0 0">
