--- a/mop/Pages/addingPages/AddressesAddPage.xaml
+++ b/mop/Pages/addingPages/AddressesAddPage.xaml
@@ -159,6 +159,9 @@
 
         <TextBlock Text="дом" 
               FontSize="35" 
+                   TextWrapping="Wrap"
+                   Width="150"
+                   TextAlignment="Center"
                FontWeight="Bold"
                HorizontalAlignment="Center" 
                VerticalAlignment="Center" 
@@ -172,25 +175,17 @@
                 </LinearGradientBrush>
             </TextBlock.Foreground>
         </TextBlock>
-        <Border BorderThickness="4"
-                CornerRadius="26"
-                Grid.RowSpan="2" Grid.ColumnSpan="2" 
-                Grid.Row="3" Grid.Column="1"
-                Height="60" Width="250">
-            <Border.BorderBrush>
-                <LinearGradientBrush>
-                    <GradientStop Color="#C0D5B3" Offset="0"/>
-                    <GradientStop Color="#B3C9D5" Offset="0.5"/>
-                    <GradientStop Color="#A3AEE6" Offset="1"/>
-                </LinearGradientBrush>
-            </Border.BorderBrush>
-            <TextBox Background="Transparent"
-                 FontSize="35" 
-                 Height="60"
-                 BorderThickness="0"
-                 Padding="15 0 0 0"
-                 x:Name="houseTb" >
-
+        <StackPanel  Grid.RowSpan="2" Grid.ColumnSpan="1" 
+                     Grid.Row="3" Grid.Column="1"
+                     HorizontalAlignment="Left" VerticalAlignment="Center"
+                     Orientation="Vertical" Margin="199,0,0,0">
+            <TextBlock Text="номер" 
+                        FontSize="35" 
+                        TextWrapping="Wrap"
+                        Width="150"
+                        TextAlignment="Center"
+                        HorizontalAlignment="Center" 
+                        VerticalAlignment="Center">
                 <TextBlock.Foreground>
                     <LinearGradientBrush>
                         <GradientStop Color="#C0D5B3" Offset="0"/>
@@ -198,9 +193,83 @@
                         <GradientStop Color="#A3AEE6" Offset="1"/>
                     </LinearGradientBrush>
                 </TextBlock.Foreground>
-            </TextBox>
-        </Border>
+            </TextBlock>
+            <Border BorderThickness="4"
+                CornerRadius="26"
+               
+                Height="60" Width="250">
+                <Border.BorderBrush>
+                    <LinearGradientBrush>
+                        <GradientStop Color="#C0D5B3" Offset="0"/>
+                        <GradientStop Color="#B3C9D5" Offset="0.5"/>
+                        <GradientStop Color="#A3AEE6" Offset="1"/>
+                    </LinearGradientBrush>
+                </Border.BorderBrush>
+                <TextBox Background="Transparent"
+                 FontSize="35" 
+                 Height="60"
+                 BorderThickness="0"
+                 Padding="15 0 0 0"
+                 x:Name="houseNumberTb" TextChanged="houseNumberTb_TextChanged" >
 
+                    <TextBlock.Foreground>
+                        <LinearGradientBrush>
+                            <GradientStop Color="#C0D5B3" Offset="0"/>
+                            <GradientStop Color="#B3C9D5" Offset="0.5"/>
+                            <GradientStop Color="#A3AEE6" Offset="1"/>
+                        </LinearGradientBrush>
+                    </TextBlock.Foreground>
+                </TextBox>
+            </Border>
+        </StackPanel>
+
+        <StackPanel Grid.RowSpan="2" Grid.ColumnSpan="1" 
+                Grid.Row="3" Grid.Column="2"
+             HorizontalAlignment="Center" VerticalAlignment="Center"
+             Orientation="Vertical">
+            <TextBlock Text="литер" 
+             FontSize="35" 
+             TextWrapping="Wrap"
+             Width="200"
+             TextAlignment="Center"
+             HorizontalAlignment="Center" 
+             VerticalAlignment="Center">
+                <TextBlock.Foreground>
+                    <LinearGradientBrush>
+                        <GradientStop Color="#C0D5B3" Offset="0"/>
+                        <GradientStop Color="#B3C9D5" Offset="0.5"/>
+                        <GradientStop Color="#A3AEE6" Offset="1"/>
+                    </LinearGradientBrush>
+                </TextBlock.Foreground>
+            </TextBlock>
+            <Border BorderThickness="4"
+                CornerRadius="26"
+                Height="60" Width="250">
+                <Border.BorderBrush>
+                    <LinearGradientBrush>
+                        <GradientStop Color="#C0D5B3" Offset="0"/>
+                        <GradientStop Color="#B3C9D5" Offset="0.5"/>
+                        <GradientStop Color="#A3AEE6" Offset="1"/>
+                    </LinearGradientBrush>
+                </Border.BorderBrush>
+
+                <TextBox Background="Transparent"
+                 FontSize="35" 
+                 Height="60"
+                 BorderThickness="0"
+                 Padding="15 0 0 0"
+                 x:Name="houseNameTb" TextChanged="houseNameTb_TextChanged" >
+
+                    <TextBlock.Foreground>
+                        <LinearGradientBrush>
+                            <GradientStop Color="#C0D5B3" Offset="0"/>
+                            <GradientStop Color="#B3C9D5" Offset="0.5"/>
+                            <GradientStop Color="#A3AEE6" Offset="1"/>
+                        </LinearGradientBrush>
+                    </TextBlock.Foreground>
+                </TextBox>
+            </Border>
+        </StackPanel>
         <TextBlock Text="кв/офис" 
       FontSize="35" 
        FontWeight="Bold"
@@ -233,7 +302,7 @@
          Height="50"
          BorderThickness="0"
          Padding="15 0 0 0"
-         x:Name="roomTb" >
+         x:Name="roomTb" TextChanged="roomTb_TextChanged" >
 
                 <TextBlock.Foreground>
                     <LinearGradientBrush>
