--- a/mop/Pages/editingPages/AddressesEditPage.xaml
+++ b/mop/Pages/editingPages/AddressesEditPage.xaml
@@ -134,7 +134,7 @@
                 CornerRadius="26"
                 Grid.RowSpan="2" Grid.ColumnSpan="2" 
                 Grid.Row="2" Grid.Column="1"
-                Height="60" Width="250">
+                Height="100"  Width="400">
             <Border.BorderBrush>
                 <LinearGradientBrush>
                     <GradientStop Color="#C0D5B3" Offset="0"/>
@@ -144,7 +144,9 @@
             </Border.BorderBrush>
             <TextBox Background="Transparent"
                  FontSize="35"
-                 Height="60" 
+                 Height="100" 
+                     TextWrapping="Wrap"
+                     Width="400"
                  BorderThickness="0"
                  Padding="15 0 0 0"
                  x:Name="streetTb">
@@ -174,25 +176,18 @@
                 </LinearGradientBrush>
             </TextBlock.Foreground>
         </TextBlock>
-        <Border BorderThickness="4"
-                CornerRadius="26"
-                Grid.RowSpan="2" Grid.ColumnSpan="2" 
-                Grid.Row="3" Grid.Column="1"
-                Height="60" Width="250">
-            <Border.BorderBrush>
-                <LinearGradientBrush>
-                    <GradientStop Color="#C0D5B3" Offset="0"/>
-                    <GradientStop Color="#B3C9D5" Offset="0.5"/>
-                    <GradientStop Color="#A3AEE6" Offset="1"/>
-                </LinearGradientBrush>
-            </Border.BorderBrush>
-            <TextBox Background="Transparent"
-                 FontSize="35"
-                 Height="60"
-                 BorderThickness="0"
-                 Padding="15 0 0 0"
-                 x:Name="houseTb" >
 
+        <StackPanel  Grid.RowSpan="2" Grid.ColumnSpan="1" 
+                     Grid.Row="3" Grid.Column="1"
+                     HorizontalAlignment="Left" VerticalAlignment="Center"
+                     Orientation="Vertical" Margin="199,0,0,0">
+            <TextBlock Text="номер" 
+                        FontSize="35" 
+                        TextWrapping="Wrap"
+                        Width="150"
+                        TextAlignment="Center"
+                        HorizontalAlignment="Center" 
+                        VerticalAlignment="Center">
                 <TextBlock.Foreground>
                     <LinearGradientBrush>
                         <GradientStop Color="#C0D5B3" Offset="0"/>
@@ -200,8 +195,83 @@
                         <GradientStop Color="#A3AEE6" Offset="1"/>
                     </LinearGradientBrush>
                 </TextBlock.Foreground>
-            </TextBox>
-        </Border>
+            </TextBlock>
+            <Border BorderThickness="4"
+                CornerRadius="26"
+               
+                Height="60" Width="250">
+                <Border.BorderBrush>
+                    <LinearGradientBrush>
+                        <GradientStop Color="#C0D5B3" Offset="0"/>
+                        <GradientStop Color="#B3C9D5" Offset="0.5"/>
+                        <GradientStop Color="#A3AEE6" Offset="1"/>
+                    </LinearGradientBrush>
+                </Border.BorderBrush>
+                <TextBox Background="Transparent"
+                 FontSize="35" 
+                 Height="60"
+                 BorderThickness="0"
+                 Padding="15 0 0 0"
+                 x:Name="houseNumberTb" TextChanged="houseNumberTb_TextChanged" >
+
+                    <TextBlock.Foreground>
+                        <LinearGradientBrush>
+                            <GradientStop Color="#C0D5B3" Offset="0"/>
+                            <GradientStop Color="#B3C9D5" Offset="0.5"/>
+                            <GradientStop Color="#A3AEE6" Offset="1"/>
+                        </LinearGradientBrush>
+                    </TextBlock.Foreground>
+                </TextBox>
+            </Border>
+        </StackPanel>
+
+        <StackPanel Grid.RowSpan="2" Grid.ColumnSpan="1" 
+                Grid.Row="3" Grid.Column="2"
+             HorizontalAlignment="Center" VerticalAlignment="Center"
+             Orientation="Vertical">
+            <TextBlock Text="литер" 
+             FontSize="35" 
+             TextWrapping="Wrap"
+             Width="200"
+             TextAlignment="Center"
+             HorizontalAlignment="Center" 
+             VerticalAlignment="Center">
+                <TextBlock.Foreground>
+                    <LinearGradientBrush>
+                        <GradientStop Color="#C0D5B3" Offset="0"/>
+                        <GradientStop Color="#B3C9D5" Offset="0.5"/>
+                        <GradientStop Color="#A3AEE6" Offset="1"/>
+                    </LinearGradientBrush>
+                </TextBlock.Foreground>
+            </TextBlock>
+            <Border BorderThickness="4"
+                CornerRadius="26"
+                Height="60" Width="250">
+                <Border.BorderBrush>
+                    <LinearGradientBrush>
+                        <GradientStop Color="#C0D5B3" Offset="0"/>
+                        <GradientStop Color="#B3C9D5" Offset="0.5"/>
+                        <GradientStop Color="#A3AEE6" Offset="1"/>
+                    </LinearGradientBrush>
+                </Border.BorderBrush>
+
+                <TextBox Background="Transparent"
+                 FontSize="35" 
+                 Height="60"
+                 BorderThickness="0"
+                 Padding="15 0 0 0"
+                 x:Name="houseNameTb" TextChanged="houseNameTb_TextChanged" >
+
+                    <TextBlock.Foreground>
+                        <LinearGradientBrush>
+                            <GradientStop Color="#C0D5B3" Offset="0"/>
+                            <GradientStop Color="#B3C9D5" Offset="0.5"/>
+                            <GradientStop Color="#A3AEE6" Offset="1"/>
+                        </LinearGradientBrush>
+                    </TextBlock.Foreground>
+                </TextBox>
+            </Border>
+        </StackPanel>
 
         <TextBlock Text="кв/офис" 
       FontSize="35"
@@ -235,7 +305,9 @@
                     Height="50" 
                     BorderThickness="0"
                     Padding="15 0 0 0"
-                    x:Name="roomTb" >
+                    x:Name="roomTb" Margin="0,0,0,1" 
+                     VerticalAlignment="Bottom" 
+                     TextChanged="roomTb_TextChanged" >
 
                 <TextBlock.Foreground>
                     <LinearGradientBrush>
